--- a/style.css
+++ b/style.css
@@ -69,3 +69,10 @@ button {
   color: #721c24;
   align-self: flex-start;
 }
+.logo {
+  font-size: 1.3rem;
+  color: #FFD700;
+  margin-bottom: 10px;
+  font-weight: bold;
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.4);
+}
